testdata/golden/hir_borrow/invalid/spawn_escape.hir
warning SEM3004 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:5 declaration of 't' shadows previous binding
error SEM3021 testdata/golden/hir_borrow/invalid/spawn_escape.sg:6:26 cannot send 'r' to a task

== HIR ==
module 

async fn use_ref(x: &int [&]) -> nothing (id=1, sym=1259) {
}

borrow edges:
  <none>
events:
  <none>
move plan:
  L2519(x): MoveCopy (copy type)

async fn t() -> nothing (id=2, sym=1260) {
  let mut x: int [copy] = 1
  let r: &int [&] = (& x): &int
  let t: type#1548 = task use_ref(r): type#1548: type#1548
  await(t): type#1549
  return
}

borrow edges:
  L2521(r) (&) borrows L2520(x) at 0:87-89 scope=S5
events:
  borrow_start L2521(r) -> L2520(x) (&) at 0:87-89 scope=S5 note="B1"
  spawn_escape L2521(r) -> L2520(x) at 0:116-117 scope=S5 note="B1"
  move L2522(t) at 0:124-125 scope=S5
  borrow_end L2521(r) -> L2520(x) scope=S5 note="scope_end B1"
move plan:
  L2520(x): MoveCopy (copy type)
  L2521(r): MoveForbidden (task escape)
  L2522(t): MoveNeedsDrop (non-copy (drop))

